<!-- - Copyright 2011-2015 Xiangrikui Company. - - Licensed under the Apache 
	License, Version 2.0 (the "License"); - you may not use this file except 
	in compliance with the License. - You may obtain a copy of the License at 
	- - http://www.apache.org/licenses/LICENSE-2.0 - - Unless required by applicable 
	law or agreed to in writing, software - distributed under the License is 
	distributed on an "AS IS" BASIS, - WITHOUT WARRANTIES OR CONDITIONS OF ANY 
	KIND, either express or implied. - See the License for the specific language 
	governing permissions and - limitations under the License. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.xrk</groupId>
	<artifactId>hws-parent</artifactId>
	<version>1.0.9-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>${project.artifactId}</name>
	<description>The parent project of hws</description>
	<url>http://code.xiangrikui.com/wiki/display/hws</url>
	<inceptionYear>2015</inceptionYear>
	<licenses>
		<license>
			<name>Apache 2</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>
	<organization>
		<name>Xiangrikui</name>
		<url>http://www.xiangrikui.com</url>
	</organization>
	<modules>
		<module>hws-common</module>
		<module>hws-container</module>
		<module>hws-http</module>
		<module>hws-dal</module>
		<module>hws-dfs</module>
		<module>hws-dist</module>
		<module>hws-test</module>
		<module>hws-server</module>
	</modules>
	<distributionManagement>
		<repository>
		     <id>nexus</id>
             <name>Public repository</name>
             <url>http://192.168.9.18:8001/nexus/content/groups/public</url>
		</repository>
		<snapshotRepository>
			<id>nexus-snapshots</id>
			<name>Nexus Snapshot Repository</name>
			<url>http://192.168.9.18:8001/nexus/content/repositories/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>  
	<profiles>
		<profile>
			<id>test</id>
			<activation>
				<file>
					<missing>.project</missing>
				</file>
			</activation>
			<modules>
				<module>hws-test</module>
			</modules>
		</profile>
		<profile>
			<id>hudson</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<testFailureIgnore>true</testFailureIgnore>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<properties>
		<!-- Common libs -->
		<fastjson_version>1.2.5</fastjson_version>
		<jedis_version>2.7.0</jedis_version>
		<httpclient_version>4.1.2</httpclient_version>
		<xmemcached_version>2.0.0</xmemcached_version>
		<cglib_version>2.2</cglib_version>
		<fastjson_version>1.2</fastjson_version>
		<javassist_version>3.19.0-GA</javassist_version>
		<netty_version>3.2.5.Final</netty_version>
		<!-- Log libs -->
		<slf4j_version>1.7.12</slf4j_version>
		<log4j_version>1.2.17</log4j_version>
		<jcl_version>1.1</jcl_version>
		<logback_version>1.1.3</logback_version>
		<!-- Test libs -->
		<junit_version>4.12</junit_version>
		<easymock_version>3.2</easymock_version>
		<jmockit_version>0.999.8</jmockit_version>

		<!-- Build args -->
		<!--<argline>-server -Xms64m -Xmx64m -XX:PermSize=64m -XX:MaxPermSize=64m</argline> -->
		<skip_maven_deploy>false</skip_maven_deploy>
		<updateReleaseInfo>true</updateReleaseInfo>
		<project.build.sourceEncoding>${file_encoding}</project.build.sourceEncoding>
		<!-- generate idea copyright -->
		<copyright>Copyright 2007-2015 Xiangrikui Commany.&#10; &#10;Licensed
			under the Apache License, Version 2.0 (the
			&quot;License&quot;);&#10;you may not use this file except in
			compliance with the License.&#10;You may obtain a copy of the License
			at&#10; &#10; http://www.apache.org/licenses/LICENSE-2.0&#10;
			&#10;Unless required by applicable law or agreed to in writing,
			software&#10;distributed under the License is distributed on an
			&quot;AS IS&quot; BASIS,&#10;WITHOUT WARRANTIES OR CONDITIONS OF ANY
			KIND, either express or implied.&#10;See the License for the specific
			language governing permissions and&#10;limitations under the License.</copyright>
		<profile.name>oss</profile.name>
		<!-- for maven compiler plugin -->
		<maven_compiler_plugin_version>2.3.2</maven_compiler_plugin_version>
		<java_source_version>1.8</java_source_version>
		<java_target_version>1.8</java_target_version>
		<file_encoding>UTF-8</file_encoding>
	</properties>
	<dependencyManagement>
		<dependencies>
			<!-- Common libs -->
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>${httpclient_version}</version>
			</dependency>
			<dependency>
				<groupId>redis.clients</groupId>
				<artifactId>jedis</artifactId>
				<version>${jedis_version}</version>
			</dependency>
			<dependency>
				<groupId>com.googlecode.xmemcached</groupId>
				<artifactId>xmemcached</artifactId>
				<version>${xmemcached_version}</version>
			</dependency>
			<dependency>
				<groupId>org.javassist</groupId>
				<artifactId>javassist</artifactId>
				<version>${javassist_version}</version>
			</dependency>
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>fastjson</artifactId>
				<version>${fastjson_version}</version>
			</dependency>
			<!-- Log libs -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j_version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${slf4j_version}</version>
			</dependency>
			<dependency>
				<groupId>commons-logging</groupId>
				<artifactId>commons-logging-api</artifactId>
				<version>${jcl_version}</version>
			</dependency>
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>${log4j_version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logback_version}</version>
			</dependency>
			<!-- Test libs -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit_version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.easymock</groupId>
				<artifactId>easymock</artifactId>
				<version>${easymock_version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.googlecode.jmockit</groupId>
				<artifactId>jmockit</artifactId>
				<version>${jmockit_version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.easymock</groupId>
				<artifactId>easymockclassextension</artifactId>
				<version>${easymock_version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>cglib</groupId>
				<artifactId>cglib-nodep</artifactId>
				<version>${cglib_version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<addMavenDescriptor>true</addMavenDescriptor>
						<index>true</index>
						<manifest>
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

		</plugins>
	</build>
	<developers>
		<developer>
			<name>lijingping</name>
			<email>lijingping@xiangrikui.com</email>
			<roles>
				<role>Developer</role>
			</roles>
			<timezone>+8</timezone>
		</developer>
		<developer>
			<name>shunciguo</name>
			<email>shunciguo@xiangrikui.com</email>
			<roles>
				<role>Developer</role>
			</roles>
			<timezone>+8</timezone>
		</developer>
		<developer>
			<name>liujinfei</name>
			<email>liujinfei@xiangrikui.com</email>
			<roles>
				<role>Developer</role>
			</roles>
			<timezone>+8</timezone>
		</developer>
		<developer>
			<name>zhubin</name>
			<email>zhubin@xiangrikui.com</email>
			<roles>
				<role>Developer</role>
			</roles>
			<timezone>+8</timezone>
		</developer>
		<developer>
			<name>yexiaoxiao</name>
			<email>yexiaoxiao@xiangrikui.com</email>
			<roles>
				<role>Developer</role>
			</roles>
			<timezone>+8</timezone>
		</developer>
	</developers>
</project>
